# quant-tading

./: Cargo.toml  ETL_CRATE_SUMMARY.md  ML_CRATE_SUMMARY.md  PROJECT_OVERVIEW.md
crates/etl/: Cargo.toml  README.md
crates/etl/examples/: basic_etl.rs
crates/etl/src/: enrichment.rs  lib.rs  pipeline.rs  sentiment.rs  storage.rs  types.rs
crates/etl/src/scraper/: coindesk.rs  cointelegraph.rs  cryptopanic.rs  mod.rs  rss.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: helpers.rs  lib.rs
crates/exchange/src/gate/: mod.rs
crates/exchange/src/gate/spot/: mod.rs  types.rs
crates/exchange/src/gate/withdraw/: mod.rs  types.rs
crates/exchange/src/okx/: mod.rs
crates/exchange/src/types/okx/: channel.rs  mod.rs
crates/ml/: ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md
crates/ml/examples/: basic_strategy.rs  lstm_prediction.rs
crates/ml/src/: backtest.rs  evaluation.rs  lib.rs  preprocessing.rs  strategy.rs  timeseries.rs  types.rs
crates/ml/src/models/: deep_learning.rs  mod.rs  traditional.rs
crates/strategy/src/: ema.rs  lib.rs
