[package]
name = "quant-tading"
version = "0.1.0"
edition = "2024"

[dependencies]


[workspace]
members = [ "crates/exchange", "crates/ml", "crates/etl", "crates/strategy"]


[workspace.dependencies]
tokio = {version="1.47.1", features=["full"]}
clap = {version = "4.5.45", features = ["derive", "env"]}
parking_lot = {version = "0.12.4", features = ["deadlock_detection", "serde"]}
reqwest = {version = "0.12.23", features=["json"]}
serde = {version = "1", features = ["derive"]}
thiserror = "2.0.16"
serde_json = "1.0.145"
async-trait = "0.1.89"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4.27", features = ["serde"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.16"
flume = "0.11.1"
config = "0.15.16"
tokio-tungstenite = {version="0.27.0", features=["rustls-tls-webpki-roots"]}
futures-util = "0.3.31"
