[package]
name = "etl"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP 客户端
reqwest = { workspace = true }
scraper = "0.20"  # HTML 解析

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 数据库和缓存
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# 时间处理
chrono = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = "1.0"

# 日志
tracing = { workspace = true }

# NLP 和文本处理
regex = "1.11"
unicode-segmentation = "1.12"

# RSS 解析
feed-rs = "2.2"

# HTML 清理
ammonia = "4.0"

# 限流
governor = "0.7"
nonzero_ext = "0.3"

# 数据处理
polars = { version = "0.44", features = ["lazy", "temporal", "dtype-datetime"] }

# 加密和哈希
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
